# estays

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  render.yaml
services/hotel-image-pipeline/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
services/hotel-image-pipeline/config/: hotels.yaml  settings.yaml
services/hotel-image-pipeline/dashboard/: index.html  package.json  vite.config.ts
services/hotel-image-pipeline/dashboard/src/: App.tsx  api.ts  styles.css
services/hotel-image-pipeline/scripts/: scrape_ar_listings.py
services/hotel-image-pipeline/src/hotel_pipeline/: __init__.py  cli.py  config.py  models.py
services/hotel-image-pipeline/src/hotel_pipeline/api/: main.py
services/hotel-image-pipeline/src/hotel_pipeline/classify/: clip_classifier.py  facility_classifier.py  room_detector.py
services/hotel-image-pipeline/src/hotel_pipeline/db/: database.py
services/hotel-image-pipeline/src/hotel_pipeline/dedupe/: deduplicator.py
services/hotel-image-pipeline/src/hotel_pipeline/discovery/: base.py  search.py
services/hotel-image-pipeline/src/hotel_pipeline/download/: downloader.py
services/hotel-image-pipeline/src/hotel_pipeline/organize/: organizer.py
services/hotel-image-pipeline/src/hotel_pipeline/pipeline/: runner.py
services/hotel-image-pipeline/src/hotel_pipeline/quality/: filter.py
services/hotel-image-pipeline/src/hotel_pipeline/utils/: hash_utils.py  (+3 more)
services/hotel-image-pipeline/tests/: test_discovery.py  test_quality.py  test_verify.py
(+158 files in other folders)
